--- a/conjugator_v0.1/README.rdoc
+++ b/conjugator_v0.1/README.rdoc
@@ -1,28 +1,5 @@
-== README
+# Japanese Verb Conjugator V0.1
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+First attempt at page to test Japanese conjugations
 
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+Ruby v2.0
